RESOLVED FIXED299996
REGRESSION(299875@main?) [iOS macOS] ASSERTION FAILED: it != m_trackIdentifiers.end()
https://bugs.webkit.org/show_bug.cgi?id=299996
Summary REGRESSION(299875@main?) [iOS macOS] ASSERTION FAILED: it != m_trackIdentifie...
Marta Darbinyan
Reported 2025-10-01 17:26:55 PDT
The following test is a flaky crashing on macOS and iOS. media/media-video-videorange.html The first crash occurred on 299879@main on Opnesource that is within the range of 299875@main. ASSERTION FAILED: it != m_trackIdentifiers.end() /Volumes/Data/worker/macOS-Sequoia-Debug-Build-EWS/build/Source/WebCore/platform/graphics/cocoa/MediaPlayerPrivateWebM.mm(1435) : AudioVideoRenderer::TrackIdentifier WebCore::MediaPlayerPrivateWebM::trackIdentifierFor(TrackID) 1 0x3007596dc WebCore::MediaPlayerPrivateWebM::trackIdentifierFor(unsigned long long) 2 0x300759a44 WebCore::MediaPlayerPrivateWebM::reenqueueMediaForTime(WebCore::TrackBuffer&, unsigned long long, WTF::MediaTime const&, WebCore::MediaPlayerPrivateWebM::NeedsFlush) 3 0x300759870 WebCore::MediaPlayerPrivateWebM::reenqueSamples(unsigned long long, WebCore::MediaPlayerPrivateWebM::NeedsFlush) 4 0x300754fc8 WebCore::MediaPlayerPrivateWebM::flushVideoIfNeeded() 5 0x30075d6ec WebCore::MediaPlayerPrivateWebM::setLayerRequiresFlush() 6 0x30077a870 WebCore::MediaPlayerPrivateWebM::MediaPlayerPrivateWebM(WebCore::MediaPlayer*)::$_4::operator()() const 7 0x30077a798 WTF::Detail::CallableWrapper<WebCore::MediaPlayerPrivateWebM::MediaPlayerPrivateWebM(WebCore::MediaPlayer*)::$_4, void>::call() 8 0x300036250 WTF::Function<void ()>::operator()() const 9 0x303172194 WebCore::AudioVideoRendererAVFObjC::notifyRequiresFlushToResume() 10 0x303171464 WebCore::AudioVideoRendererAVFObjC::stageVideoRenderer(NSObject<WebSampleBufferVideoRendering>*) 11 0x30317084c WebCore::AudioVideoRendererAVFObjC::setVideoRenderer(NSObject<WebSampleBufferVideoRendering>*) 12 0x303170648 WebCore::AudioVideoRendererAVFObjC::ensureLayerOrVideoRenderer() 13 0x303167568 WebCore::AudioVideoRendererAVFObjC::updateDisplayLayerIfNeeded() 14 0x30316e0c4 WebCore::AudioVideoRendererAVFObjC::configureHasAvailableVideoFrameCallbackIfNeeded() 15 0x303170a0c WebCore::AudioVideoRendererAVFObjC::setVideoRenderer(NSObject<WebSampleBufferVideoRendering>*) 16 0x303170648 WebCore::AudioVideoRendererAVFObjC::ensureLayerOrVideoRenderer() 17 0x303167568 WebCore::AudioVideoRendererAVFObjC::updateDisplayLayerIfNeeded() 18 0x303167644 WebCore::AudioVideoRendererAVFObjC::addTrack(WebCore::TrackInfoTrackType) 19 0x303167e54 non-virtual thunk to WebCore::AudioVideoRendererAVFObjC::addTrack(WebCore::TrackInfoTrackType) 20 0x30075af4c WebCore::MediaPlayerPrivateWebM::trackDidChangeSelected(WebCore::VideoTrackPrivate&, bool) 21 0x3007921e0 WebCore::MediaPlayerPrivateWebM::didParseInitializationData(WebCore::SourceBufferPrivateClient::InitializationSegment&&)::$_0::operator()(WebCore::VideoTrackPrivate&, bool) const::'lambda'()::operator()() const 22 0x30079207c WebCore::MediaPlayerPrivateWebM::didParseInitializationData(WebCore::SourceBufferPrivateClient::InitializationSegment&&)::$_0::operator()(WebCore::VideoTrackPrivate&, bool) const 23 0x300791f34 WTF::Detail::CallableWrapper<WebCore::MediaPlayerPrivateWebM::didParseInitializationData(WebCore::SourceBufferPrivateClient::InitializationSegment&&)::$_0, void, WebCore::VideoTrackPrivate&, bool>::call(WebCore::VideoTrackPrivate&, bool) 24 0x30073811c WTF::Function<void (WebCore::VideoTrackPrivate&, bool)>::operator()(WebCore::VideoTrackPrivate&, bool) const 25 0x30073733c WebCore::VideoTrackPrivate::setSelected(bool) 26 0x30075b894 WebCore::MediaPlayerPrivateWebM::didParseInitializationData(WebCore::SourceBufferPrivateClient::InitializationSegment&&) 27 0x300778024 WebCore::MediaPlayerPrivateWebM::MediaPlayerPrivateWebM(WebCore::MediaPlayer*)::$_0::operator()(WebCore::SourceBufferPrivateClient::InitializationSegment&&) const 28 0x300777f28 WTF::Detail::CallableWrapper<WebCore::MediaPlayerPrivateWebM::MediaPlayerPrivateWebM(WebCore::MediaPlayer*)::$_0, void, WebCore::SourceBufferPrivateClient::InitializationSegment&&>::call(WebCore::SourceBufferPrivateClient::InitializationSegment&&) 29 0x30089aeb8 WTF::Function<void (WebCore::SourceBufferPrivateClient::InitializationSegment&&)>::operator()(WebCore::SourceBufferPrivateClient::InitializationSegment&&) const 30 0x306f70b80 WebCore::SourceBufferParserWebM::parsedInitializationData(WebCore::SourceBufferPrivateClient::InitializationSegment&&)::$_0::operator()() 31 0x306f70a8c WTF::Detail::CallableWrapper<WebCore::SourceBufferParserWebM::parsedInitializationData(WebCore::SourceBufferPrivateClient::InitializationSegment&&)::$_0, void>::call() com.apple.WebKit.GPU.Development terminated (pid 13054) for reason: crash Test results: https://ews-build.webkit.org/#/builders/132/builds/35399 Test history: https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia-video-videorange.html&platform=ios&platform=mac
Attachments
Radar WebKit Bug Importer
Comment 1 2025-10-01 17:27:22 PDT
EWS
Comment 2 2025-10-01 18:30:28 PDT
Test gardening commit 300859@main (466a033dd5d5): <https://commits.webkit.org/300859@main> Reviewed commits have been landed. Closing PR #51661 and removing active labels.
EWS
Comment 3 2025-10-02 10:39:44 PDT
Test gardening commit 300887@main (6e72c3289caa): <https://commits.webkit.org/300887@main> Reviewed commits have been landed. Closing PR #51685 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 4 2025-10-03 04:49:06 PDT
EWS
Comment 5 2025-10-03 15:25:02 PDT
Committed 300973@main (9524bd23578c): <https://commits.webkit.org/300973@main> Reviewed commits have been landed. Closing PR #51743 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.