REGRESSION(299875@main?) [iOS macOS] ASSERTION FAILED: it != m_trackIdentifiers.end() https://bugs.webkit.org/show_bug.cgi?id=299996 rdar://161779919

Reviewed by Eric Carlson.

Calling AudioVideoRendererAVFObjC::addTrack could trigger a call to notifyRequiresFlushToResume,
before returning: as such the track identifier wouldn't have been inserted in the hash map yet
causing the assertion.

We ensure that the callback `notifyRequiresFlushToResume` isn't called when
we just added the video track, as no video data would have been enqueued yet: so there's
nothing to flush yet.

Re-enabling tests.
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/mac/TestExpectations:
* Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/AudioVideoRendererAVFObjC.mm:
(WebCore::AudioVideoRendererAVFObjC::stageVideoRenderer):

Canonical link: https://commits.webkit.org/300973@main